chore: modernize native maven profiles to using <agent> configuration and move to root pom. Update CI removing unnecessary metadata generation step. (#2419)