@@ -172,33 +172,7 @@
             </build>
         </profile>
         <profile>
-            <id>generate-graalvm-files</id>
-            <dependencies>
-                <dependency>
-                    <groupId>org.mockito</groupId>
-                    <artifactId>mockito-subclass</artifactId>
-                    <scope>test</scope>
-                </dependency>
-            </dependencies>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <argLine>
-                                -Dorg.graalvm.nativeimage.imagecode=agent
-                                -agentlib:native-image-agent=config-output-dir=src/main/resources/META-INF/native-image/software.amazon.lambda/powertools-tracing,experimental-class-define-support
-                                --add-opens java.base/java.util=ALL-UNNAMED
-                                --add-opens java.base/java.lang=ALL-UNNAMED
-                            </argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>graalvm-native</id>
+            <id>native</id>
             <dependencies>
                 <dependency>
                     <groupId>org.mockito</groupId>
@@ -211,28 +185,15 @@
                     <plugin>
                         <groupId>org.graalvm.buildtools</groupId>
                         <artifactId>native-maven-plugin</artifactId>
-                        <version>0.11.2</version>
-                        <extensions>true</extensions>
-                        <executions>
-                            <execution>
-                                <id>test-native</id>
-                                <goals>
-                                    <goal>test</goal>
-                                </goals>
-                                <phase>test</phase>
-                            </execution>
-                        </executions>
                         <configuration>
                             <imageName>powertools-tracing</imageName>
-                            <buildArgs>
-                                <buildArg>--add-opens java.base/java.util=ALL-UNNAMED</buildArg>
-                                <buildArg>--add-opens java.base/java.lang=ALL-UNNAMED</buildArg>
+                            <agent>
+                                <metadataCopy>
+                                    <outputDirectory>src/main/resources/META-INF/native-image/software.amazon.lambda/powertools-tracing</outputDirectory>
+                                </metadataCopy>
+                            </agent>
+                            <buildArgs combine.children="append">
                                 <buildArg>--enable-url-protocols=http</buildArg>
-                                <buildArg>--no-fallback</buildArg>
-                                <buildArg>--verbose</buildArg>
-                                <buildArg>--native-image-info</buildArg>
-                                <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
-                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                             </buildArgs>
                         </configuration>
                     </plugin>
